# GCore

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  geom_node_global_params.h
include/GCore/: Components.h  GOP.h  api.h  create_geom.h  geom_payload.hpp  read_geom.h  util_openmesh_bind.h
include/GCore/Components/: CurveComponent.h  MeshCUDAView.h  MeshComponent.h  MeshIGLView.h  MeshNVRHIView.h  MeshUSDView.h  MeshViews.h  PointsComponent.h  XformComponent.h
include/GCore/Texture/: Noise.h  Texture.h
include/GCore/algorithms/: delauney.h  intersection.h  tetgen_algorithm.h
python/: geometry.cpp
source/: Component.cpp  CurveComponent.cpp  GOP.cpp  MeshComponent.cpp  MeshViews.cpp  PointsComponent.cpp  XformComponent.cpp  create_geom.cpp  global_stage.hpp  read_geom.cpp  util_openmesh_bind.cpp
source/algorithms/: delauney.cpp  intersection.cpp
source/algorithms/CS/: gfray.slang  intersection.slang  intersection_single.slang  mesh_geometry.slang  pointsamples.slang
source/algorithms/CS/Points/: contact.slang  toAABB.slang
src/algorithms/: tetgen_algorithm.cpp
tests/: conftest.py  demo_usd_interop.py  geom_algorithms.cpp  geom_hash.cpp  openvolumemesh_bind.cpp  test_cow.cpp  test_geometry.py  test_gpu_interface.cpp  test_nodes.py  test_simple_api.py  test_write_usd.py
usd_extension/: InstancerComponent.cpp  MaterialComponent.cpp  SkelComponent.cpp  VolumeComponent.cpp  usd_extension.cpp
usd_extension/include/GCore/: usd_extension.h
usd_extension/include/GCore/Components/: InstancerComponent.h  MaterialComponent.h  SkelComponent.h  VolumeComponent.h
